# ai-from-scratch

./: .gitignore  CMakeLists.txt  README.md
src/datasets/: cifar10.h  dataloader.h  mnist.h  wine_quality.h
src/layers/: conv2d.cc  conv2d.h  dense.cc  dense.h  dropout.cc  dropout.h  initializer.h  max_pooling.cc  max_pooling.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h  softmax.cc  softmax.h  utils.h
src/losses/: cross_entropy_loss.h  mse_loss.h
src/utils/: data_transformer.h  random_generator.h  visualizer.h  weight_initializer.h
tests/: digit_classifier.cc  digit_classifier_with_dropout.cc  test_armadillo.cc  train_lenet.cc  wine_quality_estimator.cc  wine_quality_estimator_with_dropout.cc  xor_calculator.cc
